# pynari

./: .gitignore  CMakeLists.txt  README.md  anari_viewer.py  make_comparison.py  sample-dof.py  sample01.py  sample02.py  sample03.py  sample04.py  sample05.py  sample06.py  sample07.py  test01.py
examples/: anari_scene_base.py  sample_volume_sitk.py  sample_volume_vdb.py
pynari/: Array.cpp  Array.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  Data.h  Device.cpp  Device.h  Frame.cpp  Frame.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  Instance.cpp  Instance.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  SpatialField.cpp  SpatialField.h  Surface.cpp  Surface.h  Volume.cpp  Volume.h  World.cpp  World.h  (+4 more)
samples/: bobblespheres3.py  camera-depth-of-field.py  dlaf-1m.cmap.binary.float3  dlaf-1m.scalars.binary.float  geometry-cones-colorPerPrim.py  geometry-cones-colorPerVertex.py  geometry-cones.py  geometry-cylinders-colorPerPrim.py  geometry-cylinders-colorPerPrimitive.py  geometry-cylinders-colorPerVertex.py  geometry-cylinders.py  geometry-spheres-with-sampler1D.py  geometry-triangles-testorb-np.py  getInfo.py  reference-hdri.py  sample01.py  sample01_with_texture.py  sample02.py  sample03-isosurface.py  sample03.py  sample04.py  sample04_pointLight.py  sample05.py  sample06.py  sample07.py  sampler-image3d.py  testorb-base.npz  testorb-floor.npz  testorb-inner-sphere.npz  testorb-outer-sphere.npz  unstructured-cellCentric.py  unstructured-vertexCentric-uint32.py  unstructured-vertexCentric.py
subdir/examples/: anari_scene_base.py  sample01.py  sample07.py  sample_volume_sitk.py
testing/: release_00.py  release_01.py  release_02.py  release_03.py  release_04.py  release_05.py
viewer/: anari_viewer.py
viewer/examples/: anari_scene_base.py  anari_tf.py  sample01.py  sample02.py  sample05.py  sample07.py  sample_volume_sitk.py  sample_volume_vdb.py
